# aqua-veen

./: README.md  logistics.org
blindhead/: .gitignore  README.md  requirements.txt
blindhead/color_converter/: .gitignore  color_convert_folder.py  color_convert_from_configs.py  color_converter.py  plot_histogram.py  random_color_generatory.py  random_color_video.py
blindhead/color_converter_frame_to_video/: main.cpp  run.sh  run_convert_all.sh
blindhead/event_volumes/: CMakeLists.txt  README.md  main.cpp  run.sh  vispy_visualize_events.py
blindhead/event_volumes/task_lists/: Bubbles.json  Flyer.json  Flyer3.json  moneyshot2.json  test.json
blindhead/scripts/: convert_hdf5_to_hdf5_without_plugin.py  convert_hdf5_to_hdf5_without_plugin_stream.py  convert_raw_to_hdf5_wo_plugin.py  run_hdf5_conversion_for_file_list.sh  visualize_events.py  visualize_events_3D_plotly.py
blindhead/video_to_midi/: blindspot_leipzig_piece_1.py  blindspot_leipzig_piece_1_digitone.py  blindspot_leipzig_piece_2.py  blindspot_sindelfingen.py  midi_mapping_analog_four_mk2.csv  midi_mapping_digitone.csv  prepare_video.sh  readme.md  webcam_midi_hacktv_combined.py  webcam_shapes_detection.py  webcam_to_tv_mixer_dynamic.py
blindhead/video_to_midi/digitone_stress_test/: README.md  midi_stress_test_digitone.py  run_digitone_midi_stress_suite.sh
blindhead/visualizer/: visualizer.py
